--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,28 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-# Use a package of configuration called an orb.
-orbs:
-  # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
-# Orchestrate or schedule a set of jobs
+jobs:
+  live:
+    docker:
+      - image: circleci/buildpack-deps:stretch
+    working_directory: ~/app
+    steps:
+      - checkout
+      - setup_remote_docker
+            - run:
+          name: Build Docker image
+          command: |
+            docker build -t $APP_IMAGE_NAME:latest .
+      - run:
+          name: Push Docker Image
+          command: |
+            docker tag $APP_IMAGE_NAME:latest $APP_IMAGE_NAME:$CIRCLE_SHA1
+            docker push $APP_IMAGE_NAME:latest
+            docker push $APP_IMAGE_NAME:$CIRCLE_SHA1
 workflows:
-  # Name the workflow "welcome"
-  welcome:
-    # Run the welcome/run job in its own container
+  version: 2
+  build-strongswan-vpn:
     jobs:
-      - welcome/run
+      - live:
+          context: org-wide
+          filters:
+            branches:
+              only: master
